<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Smart Replying App</string>
    <string name="enable_option">Enable Smart Replying Mode  </string>
    <string name="resend_message">Enter the message to resend : </string>
    <string name="submit">Submit</string>
    <string name="message_hint">Enter the message</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="specific_contacts_message">Messages for specific contacts</string>
    <string name="default_messages" tools:ignore="ExtraTranslation">Default messages to reply</string>
    <string name="no_of_calls">No of calls before ringing alert ringtone</string>
    <string-array name="numbers">
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
</resources>
